Widget theme: fixed entry borders on nautlus search bar.

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -75,9 +75,12 @@ NautilusQueryEditor.info {
     border-style: solid;
 }
 
-NautilusSearchBar .entry {
+NautilusSearchBar .entry,
+NautilusSearchBar .entry:focus {
     border-image: none;
-    border-color: @nautilus_cluebar_color;
+    border-color: darker(@nautilus_cluebar_color);
+    border-style: solid;
+    border-width: 1;
 
     -GtkEntry-inner-border: 3;
 }
