--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
@@ -172,21 +172,19 @@ column-header:last-child .button:active:hover {
 /* unfocused window: generic element borders */
 .button:window-unfocused,
 GtkComboBox.combobox-entry .entry:window-unfocused,
-GtkComboBox.combobox-entry .button:window-unfocused, /* not working */
-GtkComboBox *:window-unfocused, /* not working */
+GtkComboBox.combobox-entry .button:window-unfocused,
+GtkComboBox *:window-unfocused, 
 .entry:window-unfocused,
 GtkSwitch.trough:window-unfocused,
-.trough:window-unfocused, /* not working */
-.trough row:window-unfocused, /* not working */
-GtkProgressBar:window-unfocused, /* not working */
-.progressbar:window-unfocused /* not working */ {
+.trough:window-unfocused {
     border-image: url("borders/generic-border-unfocused.svg") 3 3 4 3 / 3 3 4 3 stretch;
     border-radius: 3;
     border-width: 1 1 2 1;
 }
 
 /* unfocused window: primary toolbar generic element borders */
-.primary-toolbar .button:window-unfocused,
+.primary-toolbar .button.raised:window-unfocused,
+.primary-toolbar .raised .button:window-unfocused,
 .primary-toolbar .entry:window-unfocused,
 .inline-toolbar.toolbar .button:window-unfocused { 
     border-image: url("borders/primary-toolbar-generic-border-unfocused.svg") 4 / 4 stretch;
