--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -22,12 +22,16 @@
 @define-color theme_selected_bg_color @selected_bg_color;
 @define-color theme_selected_fg_color @selected_fg_color;
 
-@define-color theme_unfocused_base_color @theme_base_color; /* FIXME */
-@define-color theme_unfocused_text_color @theme_text_color; /* FIXME */
-@define-color theme_unfocused_fg_color @theme_fg_color; /* FIXME */
+@define-color theme_unfocused_base_color shade(@insensitive_bg_color, 1.05);
+@define-color theme_unfocused_text_color #a7aba7;
+@define-color theme_unfocused_fg_color #a7aba7;
 @define-color theme_unfocused_bg_color @theme_bg_color; /* FIXME */
 @define-color theme_unfocused_selected_bg_color @theme_selected_bg_color; /* FIXME */
 @define-color theme_unfocused_selected_fg_color @theme_selected_fg_color; /* FIXME */
+@define-color unfocused_button_background @theme_unfocused_bg_color;
+@define-color unfocused_borders_color #a7aba7;
+@define-color unfocused_insensitive_bg_color mix(@theme_bg_color, @theme_unfocused_base_color, 0.5);
+@define-color unfocused_toolbar mix(@theme_unfocused_bg_color, @unfocused_borders_color, 0.5);
 
 @define-color menu_bg_color shade (@theme_bg_color, 1.1);
 @define-color menu_fg_color @theme_fg_color;
