--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -29,7 +29,8 @@
 @define-color theme_unfocused_selected_fg_color @theme_selected_fg_color; /* FIXME */
 @define-color unfocused_button_background @theme_unfocused_bg_color;
 @define-color unfocused_borders_color #a7aba7;
-@define-color unfocused_insensitive_bg_color mix(@theme_bg_color, @theme_unfocused_base_color, 0.5);
+@define-color unfocused_insensitive_fg_color mix(@theme_unfocused_bg_color, @theme_unfocused_fg_color, 0.5);
+@define-color unfocused_insensitive_bg_color mix(@theme_unfocused_bg_color, @theme_unfocused_base_color, 0.5);
 @define-color unfocused_toolbar mix(@theme_unfocused_bg_color, @unfocused_borders_color, 0.5);
 
 @define-color menu_bg_color shade (@theme_bg_color, 1.1);
