trough: adapt to GTK master changes
GTK now renders the two scale areas with different style classes, to
make it possible to use different shades for the areas before/after the
current value.
We don't do anything special about it yet, but we need to make sure the
highlight part gets the right style.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
@@ -22,6 +22,7 @@
 .toolbar .button:hover:active,
 .primary-toolbar .button:active:focus,
 .trough,
+.trough.highlight,
 .trough row,
 .trough row:hover {
     background-image: -gtk-gradient (linear,
