--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
@@ -9,6 +9,7 @@ GtkComboBox.combobox-entry .button:focus,
 .button:active:hover,
 .button:insensitive,
 .trough,
+.trough.highlight,
 .trough row,
 .trough row:hover,
 GtkSwitch.trough,
