--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -389,6 +389,7 @@ GtkScale.slider:insensitive {
 }
 
 GtkScale.trough,
+GtkScale.trough.highlight,
 GtkScale.trough.vertical {
     border-width: 1;
     border-image: none;
